[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vigenere"
version = "0.0.1"
authors = [
  { name="Athena NG", email="athena.ng23@imperial.ac.uk" },
]
description = "A sample package for my assessment"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/athena-ic/vigenere"
Issues = "https://github.com/athena-ic/vigenere/issues"

[tool.pytest.ini_options]
pythonpath = [
"src",
]
addopts = [
"--import-mode=importlib",
]